syntax = "proto3";

package omnibot.actionrpg.game.interop;

option csharp_namespace = "OmniBot.ActionRpg.Game.Requests";

message SendChatInput {
	string message_id = 1;
	string timestamp = 2;
    string chat_message = 3;
}

message SendChatOutput {
    string message_id = 1;
	string timestamp = 2;
	string response_to_message_id = 3;
    bool is_success = 4;
    string message = 5;
}